--- a/templates/clearpass.html
+++ b/templates/clearpass.html
@@ -68,7 +68,7 @@
                     {% endfor %}
                 </select>
             </td>
-            <td align="right"><input type="button" class="button" value="Add device" id="addDevice" onclick="cleardeviceRow(this);" {% if va("clearpassaccess","feature")== False %} style="opacity:0.2;pointer-events:none;" {% endif %}><input type="submit" name="searchAction" value="Search" class="button" id="searchDevice" onclick="cleardeviceRow(this);" /></td>
+            <td align="right"><input type="button" class="button" value="Add device" id="addDevice" onclick="clearRow(this);" {% if va("clearpassaccess","feature")== False %} style="opacity:0.2;pointer-events:none;" {% endif %}><input type="submit" name="searchAction" value="Search" class="button" id="searchDevice" onclick="clearRow(this);" /></td>
         </tr>
     </form>
     {% for info in result %}
@@ -94,7 +94,7 @@
             <td><font class="font10px"> {{ info['swversion'] }} {{ info['osversion'] }} </font></td>
             <td align="right">
 
-                <input type="button" name="action" value="Endpoints" class="showEndpoints" data-deviceid="{{ info['id'] }}" onclick="highlightdeviceRow(this);" ><input type="button" name="action" value="Certificate Trusts" class="showTrust" data-deviceid="{{ info['id'] }}" onclick="highlightdeviceRow(this);" ><input type="button" name="action" value="Services" class="showServices" data-deviceid="{{ info['id'] }}" onclick="highlightdeviceRow(this);" ><input type="button" name="action" value="Edit" class="editDevice" data-deviceid="{{ info['id'] }}" onclick="highlightdeviceRow(this);" {% if va("clearpassaccess","feature")== False %} style="opacity:0.2;pointer-events:none;" {% endif %}><input type="submit" name="action" value="Delete" class="button" onclick="return confirm('Are you sure you want to delete this item?')" {% if va("clearpassaccess","feature")== False %} style="opacity:0.2;pointer-events:none;" {% endif %}>
+                <input type="button" name="action" value="Endpoints" class="showEndpoints" data-deviceid="{{ info['id'] }}" onclick="highlightRow(this);" ><input type="button" name="action" value="Certificate Trusts" class="showTrust" data-deviceid="{{ info['id'] }}" onclick="highlightRow(this);" ><input type="button" name="action" value="Services" class="showServices" data-deviceid="{{ info['id'] }}" onclick="highlightRow(this);" ><input type="button" name="action" value="Edit" class="editDevice" data-deviceid="{{ info['id'] }}" onclick="highlightRow(this);" {% if va("clearpassaccess","feature")== False %} style="opacity:0.2;pointer-events:none;" {% endif %}><input type="submit" name="action" value="Delete" class="button" onclick="return confirm('Are you sure you want to delete this item?')" {% if va("clearpassaccess","feature")== False %} style="opacity:0.2;pointer-events:none;" {% endif %}>
                 <input type="hidden" name="id" value="{{ info['id'] }}">
 
             </td>
