--- a/templates/deviceimages.html
+++ b/templates/deviceimages.html
@@ -64,7 +64,7 @@
                 <td align="left" valign="top"><input type="text" name="searchVersion" value="{{ formresult.searchVersion }}" size="15"></td>
                 <td></td>
                 <td align="right">
-                    <input type="button" class="button" value="Add image" id="adddeviceImage" onclick="clearimageRow(this);"  {% if va("imageaccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %}><input type="submit" name="searchAction" value="Search" class="button" id="searchImage" onclick="clearimageRow(this);">
+                    <input type="button" class="button" value="Add image" id="adddeviceImage" onclick="clearRow(this);"  {% if va("imageaccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %}><input type="submit" name="searchAction" value="Search" class="button" id="searchImage" onclick="clearRow(this);">
                 </td>
             </tr>
         </form>
@@ -86,7 +86,7 @@
                 <td><font class="font12px">{{ info['version'] }}</font></td>
                 <td><font class="font12px">{{ info['filename'] }}</font></td>
                 <td align="right">
-                    <input type="button" name="editdeviceImage" value="Edit" data-imageid="{{info['id']}}" class="editdeviceImage" onclick="highlightimageRow(this);"  {% if va("imageaccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %}><input type="submit" name="action" value="Delete" class="button" onclick="return confirm('Are you sure you want to delete {{ info['name'] }}?')"  {% if va("imageaccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %}>
+                    <input type="button" name="editdeviceImage" value="Edit" data-imageid="{{info['id']}}" class="editdeviceImage" onclick="highlightRow(this);"  {% if va("imageaccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %}><input type="submit" name="action" value="Delete" class="button" onclick="return confirm('Are you sure you want to delete {{ info['name'] }}?')"  {% if va("imageaccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %}>
                 </td>
             </tr>
         </form>
