--- a/templates/gateways.html
+++ b/templates/gateways.html
@@ -71,7 +71,7 @@
                 </select>
             </td>
             <td></td>
-            <td align="right"><input type="button" class="button" value="Add device" id="addDevice" onclick="cleardeviceRow(this);" {% if va("mobilityaccess","feature")== False %} style="opacity:0.2;pointer-events:none;" {% endif %}><input type="submit" name="searchAction" value="Search" class="button" id="searchDevice" onclick="cleardeviceRow(this);" /></td>
+            <td align="right"><input type="button" class="button" value="Add device" id="addDevice" onclick="clearRow(this);" {% if va("mobilityaccess","feature")== False %} style="opacity:0.2;pointer-events:none;" {% endif %}><input type="submit" name="searchAction" value="Search" class="button" id="searchDevice" onclick="clearRow(this);" /></td>
         </tr>
     </form>
 
@@ -106,7 +106,7 @@
                 <td><font class="font10px"> {% if sysinfo=="Unknown" %}Unknown {% else %}{{ sysinfo['_global']['_switch_role'] }} {% endif %} </font></td>
                 <td align="right">
                     {% if sysinfo['mm']=="" or sysinfo['mm']=="master"   %}
-                    <input type="button" name="Interfaces" value="Interfaces" class="mobilityInterfaces" id="mobilityInterfaces{{info['id']}}" data-deviceid="{{info['id']}}" onclick="highlightdeviceRow(this);" /><input type="button" name="Roles" value="Roles" id="mobilityRoles{{info['id']}}" data-deviceid="{{info['id']}}" class="mobilityRoles" onclick="highlightdeviceRow(this);" /><input type="button" name="Policies" value="Policies" id="mobilityPolicies{{info['id']}}" data-deviceid="{{info['id']}}" class="mobilityPolicies" onclick="highlightdeviceRow(this);" />{% else %}<font class="font11px">Managed by {{ sysinfo['master'] }}</font>{% endif %}<input type="button" name="editDevice" value="Edit" data-deviceid="{{info['id']}}" class="editDevice" onclick="highlightdeviceRow(this);" {% if va("mobilityaccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %}><input type="submit" name="action" value="Delete" class="button" onclick="return confirm('Are you sure you want to delete this item?')" {% if va("mobilityaccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %}>
+                    <input type="button" name="Interfaces" value="Interfaces" class="mobilityInterfaces" id="mobilityInterfaces{{info['id']}}" data-deviceid="{{info['id']}}" onclick="highlightRow(this);" /><input type="button" name="Roles" value="Roles" id="mobilityRoles{{info['id']}}" data-deviceid="{{info['id']}}" class="mobilityRoles" onclick="highlightRow(this);" /><input type="button" name="Policies" value="Policies" id="mobilityPolicies{{info['id']}}" data-deviceid="{{info['id']}}" class="mobilityPolicies" onclick="highlightRow(this);" />{% else %}<font class="font11px">Managed by {{ sysinfo['master'] }}</font>{% endif %}<input type="button" name="editDevice" value="Edit" data-deviceid="{{info['id']}}" class="editDevice" onclick="highlightRow(this);" {% if va("mobilityaccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %}><input type="submit" name="action" value="Delete" class="button" onclick="return confirm('Are you sure you want to delete this item?')" {% if va("mobilityaccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %}>
                     <input type="hidden" name="id" value="{{ info['id'] }}">
 
                 </td>
