--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -58,6 +58,9 @@
                     {% if va("upgradescheduleraccess","submenu")== True %}
                     <li><a href="/upgradescheduler">Upgrade information</a></li>
                     {% endif %}
+                    {% if va("upgradeprofilesaccess","submenu")== True %}
+                    <li><a href="/upgradeprofiles">Upgrade profiles</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
