--- a/templates/switch.html
+++ b/templates/switch.html
@@ -23,8 +23,8 @@
 
 {% if entryExists==1 %}
 <script type="text/javascript">
-document.getElementById("liProgress").style.display = "block";
-                progressInfo.innerHTML = "Duplicate IP address. Device not added or changed.";
+    document.getElementById("liProgress").style.display = "block";
+    progressInfo.innerHTML = "Duplicate IP address. Device not added or changed.";
 </script>
 
 {% else %}
@@ -34,6 +34,8 @@ document.getElementById("liProgress").style.display = "block";
 </script>
 
 {% endif %}
+
+
 
 <div id="maincontainer">
 
@@ -117,7 +119,7 @@ document.getElementById("liProgress").style.display = "block";
                 </td>
                 <td></td>
                 <td align="right">
-                    <input type="button" class="button" value="Add device" id="addDevice" onclick="cleardeviceRow(this);" {% if va("switchaccess","feature")==False %} disabled style="opacity:0.2;pointer-events:none;" {% endif %}><input type="submit" name="searchAction" value="Search" class="button" id="searchDevice" onclick="cleardeviceRow(this);">
+                    <input type="button" class="button" value="Add device" id="addDevice" onclick="clearRow(this);" {% if va("switchaccess","feature")==False %} disabled style="opacity:0.2;pointer-events:none;" {% endif %}><input type="submit" name="searchAction" value="Search" class="button" id="searchDevice" onclick="clearRow(this);">
                 </td>
             </tr>
         </form>
@@ -154,7 +156,7 @@ document.getElementById("liProgress").style.display = "block";
                 <td><font class="font10px">{% if info['ostype']=="arubaos-cx" %}{% if info['telemetryenable']==1 %}Enabled{% else %}Disabled{% endif %}{% else %}-{% endif %}</font></td>
                 <td><img src="static/images/tag.png" class="showattributeTooltip" width="16" height="16" data-deviceid="{{info['id']}}"></td>
                 <td align="right">
-                    <input type="button" disabled {% if va("upgradescheduleraccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %} name="deviceupgrade" value="Upgrade" data-deviceid="{{info['id']}}" id="deviceupgrade{{info['id']}}" class="deviceupgrade" onclick="highlightdeviceRow(this);"><input type="button" name="portaccess" value="Port Access" data-deviceid="{{info['id']}}" class="portaccess" id="portaccess{{info['id']}}" onclick="highlightdeviceRow(this);"><input type="button" style="opacity:0.1; pointer-events:none;" disabled name="monitor" value="Monitor" data-deviceid="{{info['id']}}" id="monitor{{info['id']}}" class="monitordevice" onclick="highlightdeviceRow(this);"><input type="button" disabled name="configuration" id="configuration{{info['id']}}" value="Configuration" data-deviceid="{{info['id']}}" data-ostype="{{info['ostype']}}" class="configuration" onclick="highlightdeviceRow(this);"><input type="button" name="editDevice" value="Edit" data-deviceid="{{info['id']}}" class="editDevice" {% if va("switchaccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %} onclick="highlightdeviceRow(this);"><input type="submit" name="action" value="Delete" class="button" onclick="return confirm('Are you sure you want to delete {{ info['ipaddress'] }}?')" {% if va("switchaccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %}>
+                    <input type="button" {% if va("upgradescheduleraccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %} name="deviceupgrade" value="Upgrade" data-deviceid="{{info['id']}}"  id="deviceupgrade{{info['id']}}" class="deviceupgrade" onclick="highlightRow(this);"><input type="button" name="portaccess" value="Port Access" data-deviceid="{{info['id']}}" class="portaccess" id="portaccess{{info['id']}}" onclick="highlightRow(this);"><input type="button" style="opacity:0.1; pointer-events:none;" disabled name="monitor" value="Monitor" data-deviceid="{{info['id']}}" id="monitor{{info['id']}}" class="monitordevice" onclick="highlightRow(this);"><input type="button" disabled name="configuration" id="configuration{{info['id']}}" value="Configuration" data-deviceid="{{info['id']}}" data-ostype="{{info['ostype']}}" class="configuration" onclick="highlightRow(this);"><input type="button" name="editDevice" value="Edit" data-deviceid="{{info['id']}}" class="editDevice" {% if va("switchaccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %} onclick="highlightRow(this);"><input type="submit" name="action" value="Delete" class="button" onclick="return confirm('Are you sure you want to delete {{ info['ipaddress'] }}?')" {% if va("switchaccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %}>
                 </td>
             </tr>
         </form>
@@ -289,7 +291,8 @@ document.getElementById("liProgress").style.display = "block";
                         <td align="center"><input type="checkbox" id="editTopology" name="topology" class="input"></></td>
                         <td align="center"><input type="checkbox" id="editTelemetry" name="telemetryenable" class="input"></></td>
                         <td align="right" width="30%">
-                            <div class="editActions"><input type="button" name="action" value="Device attributes" class="button" id="editdeviceAttributes"/>
+                            <div class="editActions">
+                                <input type="button" name="action" value="Device attributes" class="button" id="editdeviceAttributes" />
                                 <input type="submit" name="action" value="Submit changes" class="button" />
                             </div>
                         </td>
@@ -297,7 +300,7 @@ document.getElementById("liProgress").style.display = "block";
                 </tr>
             </table>
 
-            <div id="manageAttributes" style="display:none;"></div>           
+            <div id="manageAttributes" style="display:none;"></div>
         </p>
     </div>
     <div id="showdaTooltip" type="display:none;"></div>
